<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">农事易</string>
    <!--MainActivity-->
    <string name="home">首页</string>
    <string name="question">问答</string>
    <string name="trade">交易</string>
    <string name="message">消息</string>
    <string name="phone110">农科110热线</string>
    <string name="phone365">健康365热线</string>
    <string name="agriculture110">农事易</string>
    <string name="welcome">您的农事百科全书</string>

    <string name="supply">供应</string>
    <string name="demand">需求</string>
    <string name="action_settings">Settings</string>
    <string name="my_question">我的问题</string>
    <string name="my_tradeInfo">我的交易</string>
    <string name="TradeInfo">交易信息</string>
    <string name="collect_question">问题收藏</string>
    <string name="collect_trade">交易收藏</string>
    <string name="expert_question">指派给我的问题</string>
    <string name="expert_article">我的文章</string>
    <!--personal_information-->
    <string name="personal_information">个人信息</string>
    <string name="head_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="set_nickname">编辑昵称:</string>
    <string name="telephone">手机号</string>
    <string name="realName">真实姓名</string>
    <string name="industry">行业</string>
    <string name="scale">规模</string>
    <string name="address">地址</string>
    <string name="usertype">用户类别</string>
    <string name="public_user">普通用户</string>
    <string name="expert_user">专家用户</string>
    <string name="finish">完成</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="is_question">已回答</string>
    <string name="no_question">未回答</string>
    <string name="no_daudited">未审核</string>
    <string name="failed_daudited">未通过</string>


    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="internal_storage">内部存储</string>

    <!--自动更新-->
    <string name="newUpdateAvailable">发现新版本</string>
    <string name="dialogPositiveButton">立即下载</string>
    <string name="dialogNegativeButton">以后再说</string>
    <string name="app_no_new_update">没有发现新版本</string>
    <string name="download_progress">正在下载:%1$d%%</string>
    <string name="download_success">下载完成，点击安装</string>

</resources>
