<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.sxau.agriculture.utils.TitleBarTwo
        android:id="@+id/top_trade"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/et_trade_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:maxLength="45"
        android:background="@color/white"
        android:gravity="top"
        android:layout_below="@+id/top_trade"
        android:hint="请输入标题(不能超于45个字)"
        android:lines="1"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/font_title" />

    <View
        android:id="@+id/v_divide"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/et_trade_title"
        android:background="@color/greyWhite" />

    <EditText
        android:id="@+id/et_trade_content"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/v_divide"
        android:background="@color/white"
        android:gravity="top"
        android:hint="请输入内容(不能超于255个字)"
        android:maxLength="255"
        android:lines="4"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/font_title"/>

    <View
        android:id="@+id/v_divide_two"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/et_trade_content"
        android:background="@color/greyWhite" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/v_divide_two">

        <RadioGroup
            android:id="@+id/rg_trade_category"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#ffffff"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_supply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/supply"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rb_demand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/demand" />
        </RadioGroup>

        <Spinner
            android:id="@+id/sp_trade_cotegory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/iv_info_release_photo"
            android:layout_toRightOf="@+id/rg_trade_category"
            />

        <ImageView
            android:id="@+id/iv_info_release_photo"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:src="@mipmap/photo_album" />
    </RelativeLayout>

    <View
        android:id="@+id/v_divide_two_three"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_below="@+id/relativeLayout"
        android:background="@color/tintGrey"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/v_divide_two_three"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
     />

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_trade_release"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/trade_release_submit_button"
            android:text="@string/submit"
            android:textColor="@color/white" />

    </LinearLayout>
</RelativeLayout>